Correction of resources isn't given when leveling up via a kill (mob or player) and correction of xp given during a kill (mob or player)