@@ -8,8 +8,7 @@ import fr.kstars.battlepass.util.ChatUtil;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.File;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 
 public final class BattlepassPlugin extends JavaPlugin {
@@ -23,14 +22,14 @@ public final class BattlepassPlugin extends JavaPlugin {
             JsonPlayerFileLoader jsonPlayerFileLoader = new JsonPlayerFileLoader();
             File jsonPlayerFile = jsonPlayerFileLoader.loadJsonPlayerFile();
             PlayerProfile[] jsonPlayerData = jsonPlayerFileLoader.getJsonData(jsonPlayerFile);
-            JsonPlayerRepository playerRepository = new JsonPlayerRepository(getLogger(), jsonPlayerFile, new ArrayList<>(Arrays.asList(jsonPlayerData)));
+            JsonPlayerRepository playerRepository = new JsonPlayerRepository(getLogger(), jsonPlayerFile, List.of(jsonPlayerData));
             this.playerRepository = playerRepository;
 
             //Reward Repository
             JsonRewardFileLoader jsonRewardFileLoader = new JsonRewardFileLoader();
             File jsonRewardFile = jsonRewardFileLoader.loadJsonRewardFile();
             Reward[] jsonRewardData = jsonRewardFileLoader.getJsonData(jsonRewardFile);
-            JsonRewardRepository rewardRepository = new JsonRewardRepository(new ArrayList<>(Arrays.asList(jsonRewardData)));
+            JsonRewardRepository rewardRepository = new JsonRewardRepository(List.of(jsonRewardData));
 
             //Commands
             Objects.requireNonNull(getCommand("battlepass")).setExecutor(new BattlepassCommand(rewardRepository, playerRepository));
